--- a/index.html
+++ b/index.html
@@ -22,10 +22,20 @@
             background-color: black;
         }
 
+        header {
+            width: 100%;
+            text-align: center;
+            background-color: #4a4a4a;
+            color: orange;
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(255, 165, 0, 0.8);
+            font-size: 2rem;
+            margin-bottom: 10px ;
+        }
+
         .container {
             height: 100vh;
             display: flex;
-            /* flex-direction: column;*/
             justify-content: center;
             align-items: center;
             gap: 46px;
@@ -35,17 +45,16 @@
         .card {
             display: flex;
             flex-direction: column;
-            justify-content:space-between;
-          
-            background-color: #e0e0e0d8; /* Fondo gris suave */
-            color: #232222; /* Color de texto con suficiente contraste */
+            justify-content: space-between;
+            background-color: #e0e0e0d8;
+            color: #232222;
             width: 180px;
             height: 180px;
             border-radius: 20px;
             position: relative;
             cursor: pointer;
-            padding: 10px; /* Agregado padding */
-            font-family: 'Creepster', cursive; /* Fuente temática de Halloween */
+            padding: 10px;
+            font-family: 'Creepster', cursive;
             box-shadow: 0 4px 8px rgba(255, 0, 0, 0.74);
         }
 
@@ -72,14 +81,12 @@
             width: 100%;
         }
 
-        /* Estilos para alinear texto */
-        .card__title{
-
-            text-align: right; /* Alinear texto a la izquierda */
+        .card__title {
+            text-align: right;
         }
 
         h2 {
-            margin-bottom: 5px; /* Espacio entre h2 y p */
+            margin-bottom: 5px;
         }
 
     </style>
@@ -87,6 +94,10 @@
 </head>
 
 <body>
+    <header>
+        <span>Halloween Aina i Júlia</span>
+    </header>
+
     <div class="container">
         <div class="card">
             <figure>
