--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             padding: 10px 0;
             box-shadow: 0 4px 4px darkorange;
             font-size: 1.6rem;
-
+            margin-bottom: 48px;
         }
 
         .container {
@@ -111,14 +111,14 @@
         }
 
         footer {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin-top: 24px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;     
             width: 100%;
             text-align: center;
             background-color: #2e2d2d;
             color: darkorange;
             padding: 10px 0;
             box-shadow: 0 4px 4px darkorange;
+            margin-top: 48px;
         }
     </style>
 
