--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             height: 100vh;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            /* justify-content: center; */
             align-items: center;
             background-color: black;
             font-family: "Irish Grover", system-ui;
@@ -82,7 +82,7 @@
         .card:hover>figure {
             top: -10%;
             left: -10%;
-            transform: scale(0.4);
+            transform: scale(0.3);
         }
 
         img {
@@ -126,7 +126,7 @@
 
 <body>
     <header>
-        🎃<span>Halloween Aina i Júlia</span>👻
+        <span>🎃 Halloween Aina i Júlia 👻</span>
     </header>
     <div class="container">
 
