--- a/index.html
+++ b/index.html
@@ -40,14 +40,15 @@
         }
 
         .container {
-
+            max-width: 960px;
             display: flex;
             justify-content: center;
             align-items: center;
             gap: 46px;
             flex-wrap: wrap;
             align-content: flex-start;
-            flex:1;
+            flex: 1;
+
         }
 
         .card {
@@ -70,6 +71,7 @@
             position: absolute;
             top: 0;
             left: 0;
+            padding-top: 4px;
             border-radius: 20px;
             background-color: darkorange;
             width: 100%;
@@ -111,7 +113,7 @@
         }
 
         footer {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;     
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             width: 100%;
             text-align: center;
             background-color: #2e2d2d;
