--- a/index.html
+++ b/index.html
@@ -225,6 +225,41 @@
                     mansión que tenía 150000 años de antiguedad...</p>
             </div>
         </div>
+        <div class="card">
+            <figure>
+                <img src="images/casa_encantada.png" alt="Fantasma">
+            </figure>
+            <div class="card__title">
+                <h2>Casa Encantada</h2>
+            </div>
+            <div class="card__content">
+                <p>En lo alto de la colina, donde la niebla nunca se disipa, se encuentra la antigua mansión conocida como la Casa de las Sombras. Su fachada, carcomida por el tiempo, murmura secretos de un pasado oscuro. Las ventanas, opacas como ojos vigilantes, parecen seguir a quienes se atreven a acercarse. Dicen que, al caer la noche, se escuchan pasos en los pasillos vacíos, susurros en lenguas olvidadas, y el eco de una risa infantil que hiela la sangre. Algunos aseguran que los que cruzan su umbral nunca regresan… o regresan cambiados. ¿Te atreves a entrar?</p>
+            </div>
+        </div>
+        <div class="card">
+            <figure>
+                <img src="images/murci.png" alt="Fantasma">
+            </figure>
+            <div class="card__title">
+                <h2>murci</h2>
+            </div>
+            <div class="card__content">
+                <p>Murci es una murciélaga  a la que le gusta girar por el aire. Es la mascota de Emma.
+                    Emma siempre juega con ella desde las 17:30pm hasta las 24:00pm y luego se van a dormir juntas.</p>
+            </div>
+        </div>
+        <div class="card">
+            <figure>
+                <img src="images/momi.png" alt="Fantasma">
+            </figure>
+            <div class="card__title">
+                <h2>Momi</h2>
+            </div>
+            <div class="card__content">
+                <p>Momi es una momia a la que le gusta jugar al escondite. Es la mejor amiga de de Emma. Ellas siempre juegan con Murci.
+                    Murci las tenia que encontrar en la casa de Emma. Ellas tres se iban a dormir juntas.</p>
+            </div>
+        </div>
 
     </div>
     <footer>
